--- a/immocalc3.html
+++ b/immocalc3.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
 	<title>Immobilienrechner</title>
 	<link rel="icon" type="image/x-icon" href="inc/favicon.ico">
-	<!--<script src="https://unpkg.com/vue@3"></script>-->
-	<script src="inc/vue3.5.12.global.js"></script>
+	<script src="https://unpkg.com/vue@3"></script>
+	<!--<script src="inc/vue3.5.12.global.js"></script>-->
 	<link rel="stylesheet" href="inc/style.css">
 </head>
 <body>
